frontend/frontend_deployment/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quiz-ui-service
  namespace: quiz-app
spec:
  type: LoadBalancer
  ports:
    - port: 8091
      targetPort: 80
  selector:
    app: quiz-ui
