frontend/frontend_deployment/ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quiz-ui-ingress
  namespace: quiz-app
  annotations:
    cert-manager.io/issuer: my-ca-issuer
    cert-manager.io/common-name: quiz-app.com
spec:
  rules:
    - host: quiz-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quiz-ui-service
                port:
                  number: 8091
  tls:
  - hosts:
    - quiz-app.com
    secretName: myingress-cert
